--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="row">
         <div class=".col-4">
-          <div class="card ml-5">
+          <div class="card ml-5" id="bootstrap-overrides">
           <h3 class="card-header">Search for a City</h3>
           <form id="user-form" class="card-body">
             <input
@@ -34,16 +34,33 @@
        </div>     
    </div>
    <div class=".col-8">
-    <div id="todays-weather" class="card display-weather-conditions ml-5 hide">
-       
+    <div class="row">
+    <div id="todays-weather" class="display-weather-conditions ml-5 hide">
+       <h1 id ="selected-city"></h1>
+       <p id="temperature" class="weather-conditions"></p>
+       <p id="wind" class="weather-conditions"></p>
+       <p id="humidity" class="weather-conditions"></p>
+       <p id="UV-index" class="weather-conditions"></p>
        </div>
-   </div>
+       </div>
+       <div class="row">
+        <div id = "show-five-day-header" class = "show-five-day-header hide">
+          <h1> 5-Day Weather Forecast</h1>
+        </div>
+        </div>
+        <div class="row">
+        <div class=".col-8">
+        <div id="five-day-forecast" class="ml-5 hide">         
+        </div>
+      </div>
+    </div>   
   </div>
-    <!--footer-->
+    <!--footer
     <div class="footer">
       <h2>Made by Jaya Gudipalli</h2>
       <p>&copy; 2021 Social Solution Services, Inc.</p>
-    </div>
+    </div>-->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./Assets/js/script.js"></script>
   </body>
 </html>
