--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
       <p>&copy; 2021 Social Solution Services, Inc.</p>
     </div>-->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./Assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
