comment axios url

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <div class="footer">
       <h2>Made by Jaya Gudipalli</h2>
       <p>&copy; 2021 Social Solution Services, Inc.</p>
-    </div>-->
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
