--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
                 class="form-input"
               />
             </form>
-            <button type="search" class="btn" id="search">Search</button>
+            <button type="search" class="btn" id="search-btn">Search</button>
           </div>
           <!--Hide this div until search button is clicked-->
-          <div id="recent-search" class="recent-search hide"></div>
+          <div id="recent-search" class="recent-search hide">
+              <hr id="horizontal-rule" class="horizontal-rule hide"/>
+          </div>
         </div>
-        <div class=".col-8">
+        <div class=".col-8 ml-3">
           <div class="row">
             <div
               id="todays-weather"
